--- a/app/templates/rh/index.html
+++ b/app/templates/rh/index.html
@@ -1,3 +1,7 @@
+<!--
+Página blindada: não adicionar JS, modais ou handlers do sistema RH aqui.
+Qualquer alteração deve ser aprovada.
+-->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
